[WangRan] fix: fix the problem of task text overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -57,6 +57,7 @@ h2 {
 .task-list li {
   position: relative;
   padding: 5px 0 5px 0;
+  overflow-wrap: break-word;
 }
 
 .task-list li:nth-child(2n) {
